--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-style: italic;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
+  background-color: blue;
+  width: 100%;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+}
+h2{
+  font-size: 30px;
+  color: rgb(1, 41, 41);
+  
+
 }
 
-.App-link {
-  color: #61dafb;
+.password-box{
+  width: 300px;
+  background-color: crimson;
+  padding: 20px;
 }
+.password-boxIn{
+  display: flex;
+}
+.password-boxIn input{
+  flex-basis: 80%;
+  padding-left: 5px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.password-boxIn button{
+  flex-basis: 20%;
+  padding: 10px 0px;
+}
+.password-length{
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0px;
+}
+.password-length label{
+  flex-basis: 80%
+}
+.password-length input{
+  flex-basis: 20%;
+}
+.btn{
+  width: 100%;
+  padding: 10px 0px;
 }
